<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_DivertConfig" Id="{f50f2845-a71f-0dc3-1470-052cc68dd787}">
    <Declaration><![CDATA[TYPE ST_DivertConfig :
STRUCT
 	SwitchOpMode         						: E_SwitchOpMode;
	IntervalToDivert							: USINT;
	MaxAllowedDivertCount						: UDINT	:= 1;
	CurrentFunctionCoeffA						: LREAL := 0.86;
	CurrentFunctionCoeffB						: LREAL := 0.67;
	CurrentFunctionCoeffC						: LREAL := 5.5;
END_STRUCT
END_TYPE;]]></Declaration>
  </DUT>
</TcPlcObject>