<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MoverConfig" Id="{b2784631-d9fa-04c5-02b3-42fadcc04d80}">
    <Declaration><![CDATA[TYPE ST_MoverConfig EXTENDS ST_MoveOnTrackOptions:
STRUCT
//Velocity (mm/s)
	MaxVelo			: LREAL := 4000;
	NormalVelo		: LREAL := 2700;
	StoppingVelo	: LREAL := 400;
//Acceleration (mm/s^2)
	NormalAccel		: LREAL := MaxVelo;
	MaxAccel		: LREAL := 3*NormalAccel;
//Deceleration (mm/s^2)
	NormalDecel		: LREAL := MaxVelo;	
	MaxDecel		: LREAL := 3*NormalDecel;
//Jerk (mm/s^3)
	NormalJerk		: LREAL := MaxAccel;
	HighJerk			: LREAL := 2*NormalJerk;
	MergeJerk 		: LREAL := 400000;
//Platooning Vars
	VeloComp		: LREAL := 200;
	NormalMoverGap	: LREAL := 750;
	TightMoverGap	: LREAL := 20;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>