<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_SwitchMagnet" Id="{596e482d-b5f1-014c-1b84-be1ac17def4b}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SwitchMagnet

VAR_INPUT
	stSwitchConfig				: REFERENCE TO ST_SwitchConfig := GVL_General.stSwitchConfig;
	ShuttleVelocity				: REFERENCE TO LREAL := GVL_General.stMoverConfig.NormalVelo;
	SafetyPermIntlk			: REFERENCE TO BOOL;
END_VAR
VAR
	TimeoutTime					: TIME := T#2S;
	MagnetPermIntlk			: FB_MagnetPermIntlk;
	pwm									: FB_PWM;
	Command	 		  			: BOOL;
	Timeout							: TON;
END_VAR
VAR_OUTPUT
	PermIntlkOK					: BOOL;
	MagnetOn					: BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GVL_General.stSwitchConfig.UseNominalCurrentVeloSetpoints THEN
    GVL_General.stSwitchStatus.CurrentTheoreticalEstimation     := GVL_General.stSwitchConfig.SwitchCurrentNominal;
ELSE
    GVL_General.stSwitchStatus.CurrentTheoreticalEstimation     := F_CurrentVelocity(Velocity := GVL_General.stMoverConfig.NormalVelo, a := GVL_General.stSwitchConfig.SwitchModeInternal.CurrentFunctionCoeffA, b := GVL_General.stSwitchConfig.SwitchModeInternal.CurrentFunctionCoeffB, c := GVL_General.stSwitchConfig.SwitchModeInternal.CurrentFunctionCoeffC);
END_IF

GVL_General.stSwitchStatus.CurrentOutputMax     := GVL_General.stSwitchStatus.CurrentTheoreticalEstimation;

IF Timeout.Q THEN
	Command		:= FALSE;
ELSE
	Command		:= MagnetPermIntlk.bMagnetCmdOn; 
END_IF

IF Command THEN
	GVL_General.stSwitchStatus.MagnetValue := LREAL_TO_INT(GVL_General.stSwitchStatus.CurrentOutputMax*stSwitchConfig.CurrentMultFactor);
ELSE
	GVL_General.stSwitchStatus.MagnetValue := 0;
END_IF

MagnetOn	:= (GVL_General.stSwitchStatus.MagnetValue > 0);

IF stSwitchConfig.CurrentMultFactor <> 0 THEN
    GVL_General.stSwitchStatus.CurrentOutputActual  := GVL_General.stSwitchStatus.MagnetValue / stSwitchConfig.CurrentMultFactor;
END_IF

//Use Magnet feedback to this timer; set preset time based on mover velocity
Timeout(IN := Command, PT := T#2S);

PermIntlkOK	:= MagnetPermIntlk.P_OK;

pwm();
MagnetPermIntlk(SystemPermIntlkOK := (SafetyPermIntlk AND NOT Timeout.Q));]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>